control/vunit_out/test_output/lib.tb_axi.sim_4d9512e430a9fd4078ac4d71a008a464404990b7/output.txt
/home/sergio/UNI/CVS/CVS/control/test/tb_AXI.vhd:239:24:error: file "/home/sergio/UNI/CVS/CVS/control/src/plant.vhd" has changed and must be reanalysed
  i_plant: entity work.plant
                       ^
/usr/local/bin/ghdl:error: compilation error
